Fix caption jump at end, add replay button

--- a/vgridjs/css/main.scss
+++ b/vgridjs/css/main.scss
@@ -21,4 +21,14 @@
     ul {
       padding: 0px;
     }
+
+    .noselect {
+      -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none; /* Safari */
+         -khtml-user-select: none; /* Konqueror HTML */
+           -moz-user-select: none; /* Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+                user-select: none; /* Non-prefixed version, currently
+                                      supported by Chrome and Opera */
+    }
 }
